Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-382

Mingw build type conversion error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.10.0, 0.11.0
    • 0.11.0
    • None
    • Mingw cross compile (static libs).

    Description

      threadcxx.cpp: In member function 'void log4cxx::helpers::Thread::run(void* (apr_thread_t*, void*), void*)':
      threadcxx.cpp:76:46: error: invalid conversion from 'void* (apr_thread_t*, void*)' to 'void* (apr_thread_t*, void*)'
      threadcxx.cpp:76:46: error: initializing argument 3 of 'apr_status_t apr_thread_create(apr_thread_t*, apr_threadattr_t, void* (apr_thread_t*, void*), void*, apr_pool_t*)'
      make[5]: *** [threadcxx.lo] Error 1

      There is some discussion here: http://www.mail-archive.com/log4cxx-user@logging.apache.org/msg02671.html

      I'm not sure if the patch is exactly what is needed, but it works. Let me know if there's a better approach and I'll modify.

      Attachments

        1. log4cxx-4-mingw.definitions.patch
          0.6 kB
          Daniel Stonier

        Activity

          People

            carnold@apache.org Curt Arnold
            snorri Daniel Stonier
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: