LOGCXX-382: Mingw build type conversion error